// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gaJLrV"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fpdDZO"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja hwfomB"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iZHBrL"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gaJLrV"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gaJLrV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gaJLrV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO eyOCyP"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO eyOCyP"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gaJLrV"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-bsixGQ duuJYT"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO eyOCyP"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fmrPwM"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja FlEcj"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gHgYDg"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja giOeEL"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <div
        className="sc-fkFYRF DfjFZ"
      >
        <input
          className="sc-gdfmja fNehcQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF hgXxgX"
      >
        <input
          className="sc-gdfmja gaJLrV"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
        <div
          className="sc-NaKpO fizqIQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
